--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pakitani's Bistro</title>
+    <title>David Chu's China Bistro</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -34,7 +34,7 @@
               <a href="index.html"><h1>Pakistani's Bistro</h1></a>
               <p>
                 <img src="images/star-k-logo.png" alt="Halal certification" />
-                <span>Halal Certified</span>
+                <span>Kosher Certified</span>
               </p>
             </div>
 
